--- a/templates/ML/package.json
+++ b/templates/ML/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-combine-media-queries": "^1.0.20",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-imagemin": "^2.0.1",
     "grunt-contrib-uglify": "^3.1.0",
