--- a/templates/ML/package.json
+++ b/templates/ML/package.json
@@ -8,8 +8,10 @@
     "grunt-combine-media-queries": "^1.0.20",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-imagemin": "^2.0.1",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^3.1.0",
     "grunt-image-resize": "^1.0.0",
+    "grunt-purifycss": "^0.1.2",
     "grunt-responsive-images": "^1.10.1"
   },
   "scripts": {
